# haskell-book-solutions

./: LICENSE  README.md  haskell-book-solutions.cabal  stack.yaml
src/: Utils.hs
src/ch10/: db.hs  foldReview.hs  folds.hs  generalReview.hs  scan.hs
src/ch11/: as.hs  binaryTree.hs  cardinality.hs  deconstruct.hs  huttonsRazor.hs  newType.hs  normalForm.hs  phone.hs  programmer.hs  uniqueInhabitants.hs  vehicles.hs  vigenere.hs
src/ch12/: anamorphs.hs  binaryTree.hs  eitherLib.hs  eitherPerson.hs  excercises.hs  exercises.hs  maybeLib.hs  natural.hs
src/ch13/: palindrome.hs  showPerson.hs
src/ch14/: Abitrary.hs  Adition.hs  Caesar.hs  CaesarSpec.hs  Excercises.hs  Exercises.hs  Generators.hs  Idempotence.hs  VignenereSpec.hs  WordNumbers.hs
src/ch15/: BadMonoid.hs  MadLibs.hs  Monoid.hs  MonoidLaws.hs  Optional.hs  Semigroup.hs
src/ch16/: Excercises.hs  Exercises.hs  FunctorLaws.hs  Instances.hs  Lifting.hs  Possibly.hs  Sum.hs
src/ch17/: BadMonoidCheck.hs  Constant.hs  Cow.hs  Exercises.hs  Identity.hs  List.hs  Lookups.hs  MakePerson.hs  Validate.hs  Validation.hs
src/ch18/: BadMonad.hs  Exercises.hs  Exercises2.hs  FmapBind.hs  SoftwareShop.hs
src/ch20/: Exercises.hs  IdentityFold.hs  Library.hs
src/ch21/: Exercises.hs  HttpStuff.hs  Pipeline.hs
src/ch22/: BipBoop.hs  Exercises.hs  Person.hs  ShawtyReader.hs  ShortExercise.hs
src/ch23/: Exercises.hs  FizzBuzz.hs  Random.hs  Random2.hs  State.hs
src/ch24/: CanadaPhone.hs  Digit.hs  Fractions.hs  IP4Address.hs  IP6Address.hs  Logfile.hs  Practice.hs  Semver.hs
src/ch25/: Compose.hs  IdentityT.hs
src/ch26/: EitherT.hs  Exercises.hs  HitCounter.hs  MonadIO.hs  Morra1.hs  Morra2.hs  (+4 more)
(+37 files in other folders)
