name:                haskell-book-solutions
version:             0.1.0.0
homepage:            https://github.com/githubuser/haskell-book-solutions#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , ansi-terminal
                     , QuickCheck
                     , checkers
                     , bytestring
                     , wreq
                     , random
                     , trifecta
                     , parsers
                     , raw-strings-qq
                     , containers
                     , text
                     , aeson
                     , scientific
                     , transformers
                     , time
                     , safe
                     , scotty
                     , criterion
                     , vector
                     , directory
  default-language:    Haskell2010

executable vignere
  hs-source-dirs:      src
  main-is:             ch29/Vigenere.hs
  default-language:    Haskell2010
  other-modules:       Ch11.Vigenere
                     , Ch9.Caesar
  build-depends:       base >= 4.7 && < 5

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-book-solutions
